--- a/static/lang/en_us.json
+++ b/static/lang/en_us.json
@@ -6,11 +6,11 @@
   "advancement.catch.fish.title": "Tropical fish",
   "advancement.catch.fish.description": "Collect all kinds of tropical fish",
   "advancement.catch.type.title": "%s",
-  "advancement.catch.type.description": "Collect all kinds of %s",
+  "advancement.catch.type.description": "Collect all %s",
   "advancement.catch.type_bodyColor.title": "%1$s %2$s",
-  "advancement.catch.type_bodyColor.description": "Collect all kinds of %1$s %2$s",
+  "advancement.catch.type_bodyColor.description": "Collect all %1$s %2$s",
   "advancement.catch.type_bodyColor_patternColor.title": "%1$s %2$s/%3$s",
-  "advancement.catch.type_bodyColor_patternColor.description": "Collect all kinds of %1$s %2$s (%3$s striped)",
+  "advancement.catch.type_bodyColor_patternColor.description": "Collect all %1$s %2$s (%3$s striped)",
   "fish.type.betty": "Betty",
   "fish.type.blockfish": "Blockfish",
   "fish.type.brinely": "Brinely",
