Fix missing translation

--- a/static/lang/en_us.json
+++ b/static/lang/en_us.json
@@ -23,6 +23,7 @@
   "fish.type.spotty": "Spotty",
   "fish.type.stripey": "Stripey",
   "fish.type.sunstreak": "Sunstreak",
+  "fish.color.blue": "Blue",
   "fish.color.brown": "Brown",
   "fish.color.cyan": "Cyan",
   "fish.color.gray": "Gray",
