--- a/static/lang/fr_fr.json
+++ b/static/lang/fr_fr.json
@@ -22,6 +22,7 @@
   "fish.type.spotty": "Truiton",
   "fish.type.stripey": "Bigarrin",
   "fish.type.sunstreak": "Héliorai",
+  "fish.color.blue": "Bleu",
   "fish.color.brown": "Marron",
   "fish.color.cyan": "Cyan",
   "fish.color.gray": "Gris",
