Added Zer0p1us as dev contributor, rollback credit file

--- a/static/lang/en_us.json
+++ b/static/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "global.author": "Dev: Maner & EclairDeFeu360, Idea: Goldawn, Textures: Mardele, Mayleenor, Moon250 & StMaxoso",
+  "global.author": "Dev: Maner/EclairDeFeu360/Zer0p1us, Idea: Goldawn, Textures: Mardele/Mayleenor/Moon250/StMaxoso",
   "global.name": "Tropical Fish",
   "load.hover.preMessage": "The pack has been successfully loaded",
   "load.hover.postMessage": "%s\nClick to learn more",
